--- a/hackathon/gui_server/static/gui.css
+++ b/hackathon/gui_server/static/gui.css
@@ -1,6 +1,66 @@
 body {
-  background: hsl(225deg 6% 13%);
+  margin: 2rem;
+  display: flex;
+  flex-flow: column;
+  gap: 2rem;
+  background: hsl(0deg 0% 13%);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 2rem;
+}
+
+h1 {
+  margin: 0;
+}
+
+input, button {
+  padding: 0.5rem;
+  border: none;
+  outline: none;
+  border-radius: 0.25rem;
+  background: hsl(0deg 0% 31%);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
+button:hover {
+  background: hsl(0deg 60% 40%);
+}
+
+form {
+  background: hsl(0deg 0% 22%);
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+#rx {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
+
+#rx #text {
+  background: hsl(0deg 0% 31%);
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+}
+
+#rx div {
+  display: flex;
+  gap: 0.5rem;
+}
+
+#rx input {
+  width: 2rem;
+}
+
+#tx {
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+#tx input {
+  width: 100%;
 }
