--- a/hackathon/gui_server/static/gui.css
+++ b/hackathon/gui_server/static/gui.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+
 body {
   margin: 2rem;
   display: flex;
@@ -5,7 +7,7 @@ body {
   gap: 2rem;
   background: hsl(0deg 0% 13%);
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 h1 {
@@ -19,17 +21,17 @@ input, button {
   border-radius: 0.25rem;
   background: hsl(0deg 0% 31%);
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'IBM Plex Mono', monospace;
   font-size: 1rem;
 }
 
-button:hover {
+input:focus, button:hover {
   background: hsl(0deg 60% 40%);
 }
 
 form {
   background: hsl(0deg 0% 22%);
-  padding: 2rem;
+  padding: 1.5rem;
   border-radius: 1rem;
 }
 
@@ -47,6 +49,7 @@ form {
 
 #rx div {
   display: flex;
+  align-items: center;
   gap: 0.5rem;
 }
 
