--- a/hackathon/gui_server/static/gui.css
+++ b/hackathon/gui_server/static/gui.css
@@ -1,77 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
-body {
-  margin: 2rem;
+html {
+  height: 100%;
   display: flex;
   flex-flow: column;
-  gap: 2rem;
   background: hsl(0deg 0% 13%);
+}
+
+body {
+  height: 100%;
+  margin: 2rem;
+  padding: 1.2rem 2rem 1.8rem;
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+  border-radius: 1rem;
+  background: hsl(0deg 0% 22%);
   color: white;
   font-family: 'IBM Plex Mono', monospace;
-  font-size: 1rem;
 }
 
 h1 {
   margin: 0;
 }
 
-input, button {
-  padding: 0.5rem;
+form {
+  display: flex;
+}
+
+input {
+  flex-grow: 1;
+  padding: 0.75rem 1rem;
   border: none;
   outline: none;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   background: hsl(0deg 0% 31%);
   color: white;
   font-family: 'IBM Plex Mono', monospace;
   font-size: 1rem;
 }
 
-input:focus, button:hover {
+input::placeholder {
+  color: hsl(0deg 0% 60%); 
+}
+
+input:focus {
   background: hsl(0deg 60% 40%);
 }
 
-form {
-  background: hsl(0deg 0% 22%);
-  padding: 1.5rem;
-  border-radius: 1rem;
+input:focus::placeholder {
+  color: hsl(0deg 60% 70%);
 }
 
-#rx {
+main {
+  flex-grow: 1;
+  padding: 0.75rem 1rem;
   display: flex;
   flex-flow: column;
-  gap: 1rem;
-}
-
-#rx #messages {
-  flex-flow: column;
-  align-items: flex-start;
-  background: hsl(0deg 0% 31%);
-  padding: 0.5rem;
-  border-radius: 0.25rem;
-  min-height: 1rem;
-}
-
-.tx-message {
-  color:hsl(0deg 100% 60%);
-}
-
-#rx div {
-  display: flex;
-  align-items: center;
+  justify-content: flex-end;
   gap: 0.5rem;
+  border-radius: 0.5rem;
+  background: hsl(0deg 0% 31%);
 }
 
-#rx input {
-  width: 2.5rem;
-}
-
-#tx {
-  display: flex;
-  flex-flow: column;
-  align-items: flex-start;
-  gap: 1rem;
-}
-
-#tx input {
-  width: 100%;
+.self-message {
+  color: hsl(0deg 100% 60%);
 }
