--- a/hackathon/gui_server/static/gui.css
+++ b/hackathon/gui_server/static/gui.css
@@ -4,7 +4,7 @@ html {
   height: 100%;
   display: flex;
   flex-flow: column;
-  background: hsl(0deg 0% 13%);
+  background: #202124;
 }
 
 body {
@@ -15,13 +15,33 @@ body {
   flex-flow: column;
   gap: 1rem;
   border-radius: 1rem;
-  background: hsl(0deg 0% 22%);
+  background: #35363a;
   color: white;
   font-family: 'IBM Plex Mono', monospace;
+  box-shadow: 1rem  1rem 1rem #1a1a1a;
 }
 
 h1 {
   margin: 0;
+}
+
+main, input {
+  flex-grow: 1;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  background: #58595a;
+  box-shadow: 0.5rem  0.5rem 0.5rem #2e2e2e;
+}
+
+main {
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-end;
+  gap: 0.5rem;
+}
+
+.self-message {
+  color: hsl(0deg 100% 60%);
 }
 
 form {
@@ -29,12 +49,8 @@ form {
 }
 
 input {
-  flex-grow: 1;
-  padding: 0.75rem 1rem;
   border: none;
   outline: none;
-  border-radius: 0.5rem;
-  background: hsl(0deg 0% 31%);
   color: white;
   font-family: 'IBM Plex Mono', monospace;
   font-size: 1rem;
@@ -48,17 +64,3 @@ input:focus {
   background: hsl(0deg 60% 40%);
 }
 
-main {
-  flex-grow: 1;
-  padding: 0.75rem 1rem;
-  display: flex;
-  flex-flow: column;
-  justify-content: flex-end;
-  gap: 0.5rem;
-  border-radius: 0.5rem;
-  background: hsl(0deg 0% 31%);
-}
-
-.self-message {
-  color: hsl(0deg 100% 60%);
-}
